--- a/src/components/AddMembersSublocation/AddMembersSublocation.scss
+++ b/src/components/AddMembersSublocation/AddMembersSublocation.scss
@@ -1,6 +1,5 @@
-:root {
-  --main-heading-size: 2rem;
-  --sub-heading-size: 1.5rem;
+.add-members-sublocation-container {
+  margin-bottom: var(--section-margin-bottom);
 }
 
 .add-members-heading {
