--- a/src/components/Tag/Tag.scss
+++ b/src/components/Tag/Tag.scss
@@ -1,29 +1,36 @@
-.tag-container{
+.tag-container {
   display: flex;
   height: 20px;
   max-width: fit-content;
   padding: 10px;
   border-style: solid;
   border-radius: 10px;
-  background-color: #2196F3   ;
+  background-color: #2196F3;
 }
 
 
-.tag-title{
+.tag-details {
   margin-right: 5px;
+
+  >* {
+    margin-right: 5px;
+  }
 }
-.tag-close-button{
+
+.tag-close-button {
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  svg{
+
+  svg {
     width: 100%;
     height: 100%;
     transition: transform 0.3s ease, color 0.3s ease;
   }
+
   svg:hover {
     transform: scale(1.2);
-    color:red
+    color: red
   }
 }
